Fixing spacing issues, lato font

--- a/src/styles/_text-styles.scss
+++ b/src/styles/_text-styles.scss
@@ -5,7 +5,7 @@ $font-size: 10;
 
 .t {
   &-thin {
-    font-weight: 100;
+    font-weight: 300;
   }
 
   &-normal {
